--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Sonsie One' rel='stylesheet'>
 <style type="text/css">
 	body{
-		background-image: linear-gradient(to right, grey,lightgrey);
+		background-image: linear-gradient(to right, grey,lightgrey,lightgrey);
 	}
 	h1,h2{
 		font-family: 'Sonsie One';font-size: 26px;
